# ai-scaffold

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/ai_scaffold/: cli.py
src/ai_scaffold/commands/: add.py  new.py
src/ai_scaffold/generator/: context.py  engine.py  writer.py
src/ai_scaffold/integrations/: git.py  uv.py
src/ai_scaffold/profiles/: agent.py  base.py  full.py  minimal.py  rag.py
src/ai_scaffold/prompts/: interactive.py
src/ai_scaffold/templates/app/: config.j2  dockerfile.j2  main.j2  models.j2
src/ai_scaffold/templates/app/agents/: adaptive_router.j2  document_grader.j2  query_decomposer.j2
src/ai_scaffold/templates/app/components/: hybrid_retriever.j2  reranker.j2
src/ai_scaffold/templates/common/: agents_md.j2  claude_md.j2  docker_compose.j2  env_example.j2  gitignore.j2  pyproject_toml.j2  readme.j2  requirements.j2
src/ai_scaffold/templates/docs/: api_reference.j2  architecture.j2  deployment.j2
src/ai_scaffold/templates/evaluation/: golden_dataset.j2  offline_eval.j2  online_monitor.j2
src/ai_scaffold/templates/frontend/: app.j2  dockerfile.j2  requirements.j2
src/ai_scaffold/templates/observability/: cost_tracker.j2  feedback.j2  tracer.j2
src/ai_scaffold/templates/scripts/: healthcheck.j2  migrate.j2  seed.j2
src/ai_scaffold/templates/src/: config.j2  dockerfile.j2  main.j2  models.j2
src/ai_scaffold/templates/tests/: test_cache.j2  test_retrieval.j2  test_routing.j2
(+33 files in other folders)
