[project]
name = "ai-scaffold"
version = "0.1.0"
description = "Scaffold production-ready AI projects with clean architecture"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["ai", "scaffold", "rag", "llm", "cli", "project-generator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "questionary>=2",
  "jinja2>=3.1",
  "pydantic>=2",
]

[project.scripts]
create-ai-project = "ai_scaffold.cli:app"

[project.urls]
Homepage = "https://github.com/tofayel/ai-scaffold"
Repository = "https://github.com/tofayel/ai-scaffold"
Issues = "https://github.com/tofayel/ai-scaffold/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_scaffold"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
